--- a/public/Css/Index_index.css
+++ b/public/Css/Index_index.css
@@ -1,2 +1,28 @@
+/*slide*/
+.roll-news{width:100%;height:300px;border:0px;background-color:#000000;margin: 0px auto;}
+.roll-news-image{width:1024px;height:300px;border:0px;margin: 0px auto;}
+.roll-news-image img{width:1024px;height:300px;border:0px;}
+.roll-news-index{position: relative;margin-right: 15px;top: -50px;float:right;}
+/*.roll-news-index ul .roll-news-index-hover{color:#AAAAAA;text-align:center;}
+.roll-news-index li{float:left;list-style-type:disk;margin-left:15px;color:#555555;font-size:25px;}*/
+.roll-news-index-hover{color: #BCBCBC;text-align:center;}
+.roll-news-index li{background-color:black;width:10px;height:10px;float:left;list-style:none;text-align:center;margin:0 5px;border:1px solid #666666;color:black;}
+/*¹«Ë¾¼ò½é*/
+#compony_introduce_news{margin:0 auto;height:320px;border:0px solid #BCBCBC;width:1024px;margin-top:1px;}
+#compony_introduce{width:512px;height:320px;float:left;font-size: 15px;}
+#dyn_news{width:512px;height:320px;float:left;font-size: 15px;}
+#showProductsPanel{margin:0 auto;height:750px;border:0px solid #BCBCBC;width:1024px;margin-top:0px;}
+#showProducts{width:1024px;height:320px;font-size: 15px;}
+/*main*/
+.main{font-family: "ËÎÌå";width:100%;height:100%;margin:0 auto;border:0px;}
 .panel-body{height:320px;}
 .panel-body p{text-indent:2em;}
+.panel-body ul li{list-style:none; margin-left:0px;}
+.yuntengTip img{width:1024px;height:320px;}
+#product1{width: 341px;height: 350px;float: left;}
+#product2{width: 341px;height: 350px;float: left;}
+#product3{width: 341px;height: 350px;float: left;}
+#product4{width: 341px;height: 350px;float: left;}
+#product5{width: 341px;height: 350px;float: left;}
+#product6{width: 341px;height: 350px;float: left;}
+#showProductsPanel img{width: 341px;height: 280px;text-align: center;}
