--- a/public/Css/Index_index.css
+++ b/public/Css/Index_index.css
@@ -15,7 +15,7 @@
 #showProducts{width:1024px;height:320px;font-size: 15px;}
 /*main*/
 .main{font-family: "ËÎÌå";width:100%;height:100%;margin:0 auto;border:0px;}
-.panel-body{height:320px;}
+.panel-body{height:320px;letter-spacing:3px}
 .panel-body p{text-indent:2em;}
 .panel-body ul li{list-style:none; margin-left:0px;}
 .yuntengTip img{width:1024px;height:320px;}
@@ -26,3 +26,4 @@
 #product5{width: 341px;height: 350px;float: left;}
 #product6{width: 341px;height: 350px;float: left;}
 #showProductsPanel img{width: 341px;height: 280px;text-align: center;}
+#showPros{margin:0 auto;height:50px;border:0px solid #BCBCBC;width:1024px;margin-top:1px;color: #BCBCBC;font-size: 15px;}
